# aimodelshare

./: .gitignore  DRIVER_JS_TOUR_GUIDE.md  Dockerfile  IAM_REFACTOR_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_SUBMISSION_VERIFICATION.md  MODEL_BUILDING_GAME_REFACTOR_PLAN.md  PLAYGROUND_TEST_ISOLATION.md  README.md  TESTING_SUBMISSION_VERIFICATION.md  TUTORIAL_MODE_IMPLEMENTATION.md  TUTORIAL_MODE_QUICK_REFERENCE.md  convert_db.py  launch_entrypoint.py  minimal_session_auth_demo.py  precompute_cache.py  pyproject.toml  requirements-apps.txt  requirements-eval.txt  setup.cfg  setup.py  validate_modernization.py
.github/workflows/: ai_lead_engineer_app_test.yml  aimodelshare-tests.yml  aims-tests.yml  bootstrap-terraform.yml  build_model_cache.yml  cleanup-test-resources.yml  deploy-infra.yml  deploy_gradio_apps.yml  deploy_single_apps.yml  destroy-infra.yml  github_workflows_publish-lambda-layers.yml  github_workflows_session-login-integration_Version2.yml  gradio-smoke.yml  kpi-dict-submissioncount-integration.yml  mc-comprehensive-integration-test.yml  mc-rank-integration-test.yml  mc_auth_debug.yml  moral_compass_auth_test.yml  playground-integration-tests.yml  publish-lambda-layers.yml  pypi-manual-publish.yml  pypi_aimodelshare_tests.yml  sessionid-kpi-workflow.yml  test-colab-install.yml  test-colab-simulated.yml  test_cache_preds.yml  unit-tests.yml
aimodelshare/: aimsonnx.py  api.py  aws.py  bucketpolicy.py  containerization.py  generatemodelapi.py  iam_utils.py  leaderboard.py  model.py  modeluser.py  playground.py  reproducibility.py
aimodelshare/iam/: codebuild_policy.txt  lambda_policy.txt
aimodelshare/main/: eval_lambda.txt
aimodelshare/moral_compass/: README.md  __init__.py  _version.py  api_client.py  challenge.py  config.py
aimodelshare/moral_compass/apps/: __init__.py  _env_utils.py  _launch_core.py  ai_consequences.py  ai_consequences_ca.py  ai_consequences_es.py  bias_detective.py  bias_detective.py.bak  bias_detective_ca.py  bias_detective_en.py  bias_detective_es.py  bias_detective_part1.py  bias_detective_part2.py  bias_detective_part_es.py  bias_detective_translations_part1.py  bias_detective_v2.py  judge.py  (+30 more)
aimodelshare/utils/: __init__.py
docs/: BIAS_DETECTIVE_I18N.md
infra/: README.md  main.tf  terraform.tfvars  variables.tf
infra/bootstrap/: README.md  main.tf  outputs.tf  variables.tf
infra/lambda/: app.py
infra/layer/: requirements.txt
moral_compass/: __init__.py  _version.py  api_client.py  config.py
notebooks/: 00_Justice_Challenge_Landing.ipynb  00_Justice_Challenge_Landing_ca.ipynb  00_Justice_Challenge_Landing_es.ipynb  Etica_en_Joc_Justice_Challenge.ipynb  Etica_en_Joc_Justice_Challenge_ca.ipynb  Etica_en_Joc_Justice_Challenge_es.ipynb  Etica_en_Joc_Justice_Challenge_nightly.ipynb  moral_compass_model_submissions_and_challenge_progress.ipynb  notebooks_compas_playground_multiframework.ipynb
scripts/: cache_terraform_outputs.sh  cleanup_test_resources.py  mc_rank_integration_test.py  verify_api_reachable.sh
tests/: MORAL_COMPASS_INTEGRATION_TEST_README.md  QUICK_START_INTEGRATION_TEST.md  gradio_smoke_test.py  load_mixed_duration.py  load_multi_table.py  load_single_table.py  test_aimsonnx.py  test_api_integration.py  test_attempt_limit.py  test_bias_detective_combined_score.py  test_bias_detective_task_tracking.py  test_cleanup_script.py  test_complexity_slider_expansion.py  test_delayed_signin.py  test_driver_js_tour.py  test_gradio_smoke.py  test_kpi_dict_unhashable_integration.py  test_kpi_improvements.py  test_launch_entrypoint.py  test_model_building_game_enhancements.py  test_model_building_game_logging.py  test_model_building_game_slider_fix.py  test_moral_compass_apps.py  test_moral_compass_auth_create_table.py  test_moral_compass_client_minimal.py  test_moral_compass_comprehensive_integration.py  test_moral_compass_unit.py  test_playground_ai_lead_engineer_app.py  test_playground_compas_multiframework.py  test_playground_compas_multiframework_short.py  test_playground_keras_model_types.py  test_playground_model_types.py  test_playground_moral_compass_challenge.py  test_playground_torch_model_types.py  test_seamless_submission_after_login.py  test_sessionid_kpi.py  test_sessionid_kpi_integration.py  test_submission_count_updates.py  test_team_assignment.py  test_token_authentication.py  (+4 more)
tests/integration/: __init__.py  test_penguin_playground_submit_model.py
tests/unit/: README.md  test_model_helpers.py  test_modernization.py  test_preprocessor_diagnostics.py  test_utils_imports.py
(+1 files in other folders)
